fix(safari/chrome): flex and wrap

--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,19 @@ figure figcaption {
   font-size: 0.6rem;
 }
 
+
+#v2 section.gallery img.square {
+  max-width: 42%;
+}
+
+#v2 section.gallery img.landscape {
+  max-width: 58%;
+}
+
 #v2 section.gallery div.row {
   display: flex;
   width: 100%;
+  max-height: 316px;
 }
 
 #v2 section.gallery {
@@ -135,7 +145,12 @@ main#v2 {
   }
 
   #v2 section.gallery div.row {
-    flex-wrap: wrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    max-height: none;
+  }
+  #v2 section.gallery img.square, #v2 section.gallery img.landscape {
+    max-width: 100%;
   }
 }
 
